Fix weird positioning on iPhone 6

--- a/autoscheduler/frontend/src/components/LandingPage/LandingPage.css
+++ b/autoscheduler/frontend/src/components/LandingPage/LandingPage.css
@@ -1,5 +1,6 @@
 .container {
     flex-grow: 1;
+    flex-shrink: 0;
     display: flex;
     flex-direction: column;
     height: auto;
